--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ numpy==1.26.4
 arabic_reshaper==3.0.0
 python-bidi==0.4.2
 git+https://github.com/haotian-liu/LLaVA.git@786aa6a19ea10edc6f574ad2e16276974e9aaa3a
+elevenlabs==1.3.1
